--- a/index.html
+++ b/index.html
@@ -108,7 +108,31 @@
         </div>
         <div class="col-12 col-sm-6 col-lg-4"></div>
       </div>
-      <div class="row">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/images/278x346.png" class="d-block w-100" alt="..." style="width: 100%;">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/278x346.png" class="d-block w-100" alt="..." style="width: 100%;">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/278x346.png" class="d-block w-100" alt="..." style="width: 100%;">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/images/278x346.png" class="d-block w-100" alt="..." style="width: 100%;">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+      <div class="row" id="grid">
         <div class="col-12 col-sm-6 col-md-3">
           <img
             src="assets/images/278x346.png"
